# jdw-sc

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.toml  myfile.wav.scd  readme.md  release_1_requirements.md  subprocess_test.py
python/: batch_send_bundle_test.py  config.py  kill_all_notes.py  load_sample.py  note_modify_test.py  note_on_timed_test.py  nrt_record_test.py  play_sample_test.py  s_new_timed_gate_test.py
python/synths/: brute.scd  dbass.scd  example.scd  pluck.scd
sample_packs/: KayR8.rar  KorgT3.rar
sample_packs/KayR8/: [www.KB6.de].txt  notes.txt
sample_packs/KorgT3/: [www.kb6.de].txt
src/: config.rs  internal_osc_conversion.rs  lib.rs  main.rs  model.rs  node_lookup.rs  nrt_record.rs  osc_client.rs  osc_daemon.rs  osc_model.rs  processes.rs  sample_sorting.rs  samples.rs  sampling.rs  sc_process_management.rs  scd_templating.rs  state_structs.rs  supercollider.rs  synth_templates.rs  util.rs  zeromq.rs
src/rewrite/: readme.md
src/scd/: nrt_record.scd  nrt_record.scd.template  sampler.scd  start_server.scd  start_server.scd.template
src/scd/synths/: brute.scd  example.scd  gentle.scd  miniBrute.scd  sampler.scd  sawbass.scd
temp/: KorgT3.wav.reapeaks  bass.wav.reapeaks  bass2.wav.reapeaks  bass4.wav.reapeaks  drum1.wav.reapeaks  drum2.wav.reapeaks  myfile.wav.reapeaks  solo.wav.reapeaks  solo2.wav.reapeaks  start_server.scd
