[package]
name = "jdw-sc"
version = "0.1.0"
authors = ["Emstrevk <emil.strandvik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subprocess = "0.2.8"
ctrlc = "3.2.1"
rosc = "0.7.0"
serde = { version = "1.0", features = ["derive"] } # https://serde.rs/derive.html
serde_json = "1.0"
json = "*"
regex = "1.6.0"
log = "0.4.17"
simple_logger = "2.2.0"
jdw-osc-lib = { git = "ssh://git@bitbucket.org/Emstrevk/jdw-osc-lib.git", branch = "master" }
home = "0.5.9"
