[package]
name = "jdw-sc"
version = "0.1.0"
authors = ["Emstrevk <emil.strandvik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subprocess = "0.2.9"
ctrlc = "3.4.5"
rosc = "0.10.1"
serde = { version = "1.0", features = ["derive"] } # https://serde.rs/derive.html
serde_json = "1.0"
json = "*"
regex = "1.11.1"
log = "0.4.22"
simple_logger = "5.0.0"
jdw-osc-lib = { git = "https://github.com/estrandv/jdw-osc-lib.git", branch = "master" }
home = "0.5.9"
bigdecimal = "0.4.6"
